// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should affect error message after formatting 1`] = `
"
<<<<<< before
ERROR: (no-unnecessary-parens-for-arrow-function-arguments) /src/tslint-misc-rules/no-unnecessary-parens-for-arrow-function-arguments/test.ts[1, 14]: arrow functions with one argument should not have parentheses around the argument

======
no error

>>>>>> after
"
`;

exports[`should be pretty after formatting 1`] = `
"
<<<<<< before
const log = (x) => console.log(x);

======
const log = x => console.log(x);

>>>>>> after
"
`;
